<resources>
    <string name="app_name">Connect Four</string>
    <string name="action_settings">Settings</string>
    <string name="newGame">New game</string>
    <string name="nextMove">Next move</string>
    <string name="toEnd">End</string>
    <string name="status">Connect Four</string>

    <string name="Text1">Single Player Mode</string>
    <string name="Text2">Multi Player Mode</string>

    <string name="Player1">Genius</string>
    <string name="Player2">User</string>

    <string name="vsEasy">Easy</string>
    <string name="vsMedium">Medium</string>
    <string name="vsHard">Hard</string>
    <string name="vsPlayer">Multiplayer</string>
    <string name="multiplayer">Connect to Player 2</string>

    <!-- Utils string -->
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>

    <!-- Skeleton strings -->
    <string name="hello_world">Hello world!</string>
    <string name="next_turn_">Next turn</string>
    <string name="welcome">Welcome to the Skeleton, the game!  This is network-only, so you&amp;apos;ll need to log in to play!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="pairing">Pair up</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>


    <!-- Preferences -->
    <string name="preferences">Preferences</string>
    <string name="pref_key" translatable="false">player_name</string>
    <string name="pref_default">Player</string>
    <string name="pref_title">Player name</string>
    <string name="name_default">player</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="default_broadcast">Tick</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_continue">Continue</string>


</resources>
